--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "babel-plugin-styled-components": "^1.12.0",
+    "dotenv": "^8.2.0",
     "gatsby": "^3.2.1",
     "gatsby-plugin-google-analytics": "^3.2.0",
     "gatsby-plugin-image": "^1.2.1",
@@ -29,6 +30,7 @@
     "gatsby-plugin-sitemap": "^3.2.0",
     "gatsby-plugin-styled-components": "^4.2.0",
     "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-source-graphcms": "^2.5.1",
     "gatsby-transformer-remark": "^3.2.0",
     "gatsby-transformer-sharp": "^3.2.0",
     "netlify-cms-app": "^2.14.40",
