Criação do header

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,1 @@
-GRAPHCMS_URL=https://api-us-east-1.graphcms.com/v2/ckn9b9kvh3hx001zacsox0pwt/master
+GRAPHCMS_ENDPOINT=https://api-us-east-1.graphcms.com/v2/ckn9b9kvh3hx001zacsox0pwt/master
