--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "vai-na-web",
-  "author": "Evelyn",
+  "author": "vai na web",
   "keywords": [
     "gatsby"
   ],
@@ -18,6 +18,7 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "babel-plugin-styled-components": "^1.12.0",
+    "date-fns": "^2.21.1",
     "dotenv": "^8.2.0",
     "gatsby": "^3.2.1",
     "gatsby-plugin-google-analytics": "^3.2.0",
