--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
 GRAPHCMS_ENDPOINT=https://api-us-east-1.graphcms.com/v2/ckn9b9kvh3hx001zacsox0pwt/master
+GRAPHCMS_URL=https://api-us-east-1.graphcms.com/v2/ckn9b9kvh3hx001zacsox0pwt/master
