--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-helmet": "^6.1.0",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
+    "slugify": "^1.6.0",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
