--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.2.0",
     "gatsby": "^3.2.1",
     "gatsby-plugin-google-analytics": "^3.2.0",
+    "gatsby-plugin-google-tagmanager": "^4.9.0",
     "gatsby-plugin-image": "^1.3.0",
     "gatsby-plugin-manifest": "^3.2.0",
     "gatsby-plugin-mdx": "^2.2.0",
